missingkids/less/css/application.css
/* ... */
.statistics-wrapper .statistics-content .counter {
  color: inherit;
  font-size: 144px;
  font-family: 'Futura', 'Arial', sans-serif;
}
@media (max-width: 380px) {
  .statistics-wrapper .statistics-content .counter {
    font-size: 80px;
  }
}
@media (max-width: 420px) {
  .statistics-wrapper .statistics-content .counter {
    font-size: 80px;
  }
}
@media (min-width: 768px) and (max-width: 1023px) {
  .statistics-wrapper .statistics-content .counter {
    font-size: 100px;
  }
}
.statistics-wrapper .statistics-content.white {
  color: #fff;
}
.home-content {
  text-align: center;
  padding: 20px 40px;
}
@media (max-width: 767px) {
  .home-content {
    padding: 10px 20px;
  }
}
.home-content .desc {
  color: #818181;
  line-height: 32px;
  margin: 0;
}
@media (max-width: 767px) {
  .home-content .desc {
    font-size: 16px;
    line-height: 1.5;
  }
}
.home-content .title {
  color: #FDB813;
}
@media (max-width: 767px) {
  .home-content .title {
    font-size: 34px;
  }
}
.home-teaser-wrapper:first-child {
  padding-left: 0;
  padding-right: 0;
}
.home-teaser-wrapper.homepage-teasers {
  padding-left: 0;
  padding-right: 0;
}
.home-teaser-wrapper.homepage-teasers:last-child {
  padding-bottom: 16px;
}
@media (min-width: 767px) {
  .home-teaser-wrapper.homepage-teasers:last-child {
    padding-bottom: 24px;
    padding-left: 8px;
    padding-right: 8px;
  }
}
@media (min-width: 992px) {
  .home-teaser-wrapper.homepage-teasers:last-child {
    padding-bottom: 32px;
    padding-left: 8px;
    padding-right: 8px;
  }
}
.home-teaser-wrapper.homepage-teasers .col-centered {
  margin-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}
@media (max-width: 767px) {
  .home-teaser-wrapper picture,
  .home-teaser-wrapper img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
  }
}
.home-teaser-wrapper .video-btn {
  position: absolute;
  z-index: 1000;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  width: 80px;
  height: 60px;
  border-radius: 10px;
  cursor: pointer;
}
@media (max-width: 767px) {
  .home-teaser-wrapper .video-btn {
    width: 60px;
    height: 40px;
  }
}
.home-teaser-wrapper .video-btn:after {
  content: "\25B6";
  position: absolute;
  left: 59%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
  font-size: 25px;
  height: 30px;
  width: 30px;
  color: #fff;
}
.home-teaser-wrapper .video-btn.youtube-btn {
  background-color: rgba(255, 0, 0, 0.8);
}
.home-teaser-wrapper .video-btn.youtube-btn:hover {
  background-color: #ff0000;
}
.home-teaser-wrapper .video-btn.vimeo-btn {
  background-color: rgba(0, 177, 255, 0.8);
}
.home-teaser-wrapper .video-btn.vimeo-btn:hover {
  background-color: #00b1ff;
}
.home-teaser-wrapper .small-teasers {
  padding: 0;
}
.home-teaser-wrapper .small-teasers .home-teaser {
  margin-top: 8px;
}
.home-teaser-wrapper .home-teaser {
  border-radius: 10px;
  border: 1px solid transparent;
  overflow: hidden;
}
.home-teaser-wrapper .home-teaser.full-teaser {
  position: relative;
  padding: 0;
}
@media (min-width: 767px) {
  .home-teaser-wrapper .home-teaser.full-teaser {
    min-height: 350px;
  }
}
@media (min-width: 992px) {
  .home-teaser-wrapper .home-teaser.full-teaser {
    min-height: 520px;
  }
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  background: rgba(71, 165, 194, 0.5);
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content {
  padding: 16px;
  position: absolute;
  top: 15px;
  left: 15px;
  bottom: 15px;
  max-width: 320px;
  border: 1px solid;
  color: #fff;
  border-color: #fff;
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content.no-border {
  border: none;
}
@media (min-width: 767px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content {
    top: 25px;
    left: 25px;
    bottom: 25px;
  }
}
@media (min-width: 992px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content {
    top: 55px;
    left: 55px;
    bottom: 55px;
  }
}
@media (max-width: 480px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content {
    max-width: 180px;
  }
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content.right {
  left: auto;
  right: 15px;
}
@media (min-width: 767px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content.right {
    right: 25px;
  }
}
@media (min-width: 992px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content.right {
    right: 55px;
  }
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .title {
  color: inherit;
  margin: 0;
}
@media (max-width: 480px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .title {
    font-size: 24px;
  }
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .desc {
  color: inherit;
  margin-top: 5px;
}
@media (max-width: 480px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .desc {
    font-size: 16px;
  }
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .link {
  color: inherit;
  position: absolute;
  right: 20px;
  bottom: 15px;
  margin: 0;
}
@media (max-width: 480px) {
  .home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .link {
    font-size: 13px;
  }
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .link:after {
  content: ">>";
  position: relative;
  left: 5px;
  display: inline-block;
}
.home-teaser-wrapper .home-teaser.full-teaser .teaser-content-wrapper .teaser-content .link:hover {
  text-decoration: none;
}
/* ... */

